Fixed model reservation